Update Mobile SDK docs

--- a/docs/wearables/sdks/vital-core.mdx
+++ b/docs/wearables/sdks/vital-core.mdx
@@ -5,8 +5,12 @@ sidebarTitle: "Core SDK"
 
 ## Overview
 
-Check out the [SDK Authentication guide](https://docs.tryvital.io/wearables/sdks/authentication) on the available SDK authentication
+Check out the [SDK Authentication guide](/wearables/sdks/authentication) on the available SDK authentication
 schemes, and how to authenticate with the Vital Mobile SDK.
+
+<Card title="Mobile SDK Authentication" icon="id-card" href="/wearables/sdks/authentication" horizontal>
+  Learn how to authenticate your mobile app user with Vital Mobile SDK.
+</Card>
 
 ## Accessing Vital API
 
