Update Mobile SDK doc pt.2

--- a/docs/wearables/guides/apple-healthkit.mdx
+++ b/docs/wearables/guides/apple-healthkit.mdx
@@ -9,6 +9,17 @@ Refer to the [Mobile SDK Installation](/wearables/sdks/installation) and [Vital 
 instructions and general API usage. This guide contains information on the the behaviour and required configuration
 specific to the Apple HealthKit integration.
 
+<Card title="Mobile SDK Installation" icon="helmet-safety" href="/wearables/sdks/installation" horizontal>
+Learn about the minimum runtime and build-time requirements of Vital Mobile SDKs, and how to add them into
+your project through your package dependency manager.
+</Card>
+
+<Card title="Vital Health SDK" icon="heart" iconType="solid" href="/wearables/sdks/vital-health" horizontal>
+Learn about the initial setup required by Vital Health SDK, and the API exposed by Vital Health SDK
+for managing and inspecting health data permissions and automatic data sync.
+</Card>
+
+
 ## Sync Frequency
 
 | App state  | Behaviour |
