Tweak wordings on the sharing credentials page

--- a/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
@@ -23,31 +23,23 @@ Each application is issued one set of OAuth client credentials (client ID + secr
 As a Cross-Site Request Forgery (CSRF) mitigation, they also typically require every application to pre-register
 a Redirect URI. The `/authorize` flow would then validate inbound requests against the Redirect URI on record.
 
-Most providers allow exactly one Redirect URI registration per application, which means the Redirect URI
-must be one of:
-
-* your existing OAuth callback endpoint — under a domain you control; or
-* the Vital OAuth callback endpoint.
-
-It cannot be both.
-
-To avoid disruption to your production systems, we recommend sticking with your existing OAuth callback endpoint.
-
-<Info>
-Some providers, like Google Fit, also require domain verification. So it further restricts
-the Redirect URI to point at a domain you control.
-</Info>
-
 ## Challenge
 
-Because of the Redirect URI restriction as described above, you must take some extra steps if you intend to
-share your OAuth Client Credentials between Vital [Bring Your Own OAuth](/wearables/connecting-providers/bring-your-own-oauth/overview) and your
-existing production systems.
+Most providers allow **only one** Redirect URI registration per OAuth application.
+
+This means your OAuth application cannot simutaneously support both your own existing OAuth callback endpoint, as well as
+[Vital Link](/wearables/connecting-providers/introduction) OAuth callback endpoint.
 
 
-## Solution
+## Recommended Apporach
 
-Vital recommends 
+To support this credential sharing use case, Vital recommends you to:
+
+1. Continue to point your OAuth application at your existing OAuth callback endpoint;
+
+2. Extend your endpoint to [detect and redirect](#details) callbacks from Vital Link originiated OAuth requests to the
+   [Vital Link OAuth callback endpoint](#vital-oauth-callback-endpoint-url).
+
 
 ```mermaid
 sequenceDiagram
@@ -64,6 +56,7 @@ sequenceDiagram
     Your API->>Vital Link: Redirect
 ```
 
+### Details
 
 <Steps>
 
@@ -74,7 +67,7 @@ existing OAuth callback endpoint.
 
 </Step>
 
-<Step title="Extend your existing OAuth callback endpoint with Vital awareness">
+<Step title="Extend your existing OAuth callback endpoint with Vital Link awareness">
 
 Your OAuth callback endpoints can rely on the `state` query parameter to differentiate the request
 origin, i.e., whether it is from Vital or from your own production systems.
