--- a/docs/wearables/guides/dexcom_v3.mdx
+++ b/docs/wearables/guides/dexcom_v3.mdx
@@ -1,6 +1,11 @@
 ---
-title: "Dexcom"
+title: "Dexcom (OAuth based)"
 ---
+
+<Note>
+`dexcom_v3` is the provider slug for Dexcom (OAuth based).<br />
+For the password-based `dexcom` integration, see [Dexcom (G6 and older)](./dexcom).
+</Note>
 
 import BYOO from '/snippets/byoo.mdx';
 
