[VIT-7726] Sleep Cycle

--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -2,6 +2,18 @@
 title: "Providers"
 ---
 
+
+### NEW: Sleep Cycle Summary Type (Nov 2024)
+
+We are introducing a new summary type `Sleep Cycle` to represent the sleep stages in a sleep session.
+
+<Accordion icon="venus" iconType="duotone" title="Details" defaultOpen>
+Check out the [Get Sleep Cycle](/api-reference/data/sleep-cycle/get-summary) endpoint and
+the [Sleep Cycle data events](/event-catalog/daily.data.sleep_cycle.created) in the Event Catalog
+for more information.
+</Accordion>
+
+
 ### Body Summary model extension (Nov 2024)
 
 The Body Summary model now includes 4 new fields:
