improve changelog copy

--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -5,7 +5,8 @@ title: "Providers"
 
 ### NEW: Sleep Cycle Summary Type (Nov 2024)
 
-We are introducing a new summary type `Sleep Cycle` to represent the sleep stages in a sleep session.
+We are introducing a new Sleep Cycle summary type (`sleep_cycle`) which captures the detailed hypnogram of a sleep session.
+The existing hyponogram timeseries type is deprecated in favour of this new summary type.
 
 <Accordion icon="venus" iconType="duotone" title="Details" defaultOpen>
 Check out the [Get Sleep Cycle](/api-reference/data/sleep-cycle/get-summary) endpoint and
