[VIT-7862] Update body changelog: Bone mass

--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -4,12 +4,13 @@ title: "Providers"
 
 ### Body Summary model extension (Nov 2024)
 
-The Body Summary model now includes 3 new fields:
+The Body Summary model now includes 4 new fields:
  * `water_percentage` - The percentage of water in the body.
  * `muscle_mass_percentage` - The percentage of muscle mass in the body.
  * `visceral_fat_index` - Provider's score of visceral fat levels.
+ * `bone_mass_percentage` -  The percentage of bone mass in the body.
 
-At the time of writing all three are only available from the Withings provider.
+At the time of writing all four are only available from the Withings provider.
 
 <Accordion icon="chart-scatter" iconType="duotone" title="Details" defaultOpen>
 Check out the [Get Body Summary](/api-reference/body/get-summary) endpoint and
