[VIT-7726] Sleep Cycle (#296)
* [VIT-7726] Sleep Cycle

--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -2,6 +2,19 @@
 title: "Providers"
 ---
 
+
+### NEW: Sleep Cycle Summary Type (Nov 2024)
+
+We are introducing a new Sleep Cycle summary type (`sleep_cycle`) which captures the detailed hypnogram of a sleep session.
+The existing hyponogram timeseries type is deprecated in favour of this new summary type.
+
+<Accordion icon="venus" iconType="duotone" title="Details" defaultOpen>
+Check out the [Get Sleep Cycle](/api-reference/data/sleep-cycle/get-summary) endpoint and
+the [Sleep Cycle data events](/event-catalog/daily.data.sleep_cycle.created) in the Event Catalog
+for more information.
+</Accordion>
+
+
 ### Body Summary model extension (Nov 2024)
 
 The Body Summary model now includes 4 new fields:
