--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -3,7 +3,7 @@ title: "Providers"
 ---
 
 
-### NEW: Sleep Cycle Summary Type (Nov 2024)
+### Sleep Cycle Summary Type (Nov 2024)
 
 We are introducing a new Sleep Cycle summary type (`sleep_cycle`) which captures the detailed hypnogram of a sleep session.
 The existing hyponogram timeseries type is deprecated in favour of this new summary type.
