Update provider and BYOO lists

--- a/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
@@ -20,6 +20,10 @@ With custom credentials you can use your own team name and setup your own logo f
 
 ## OAuth Providers supporting BYOO
 
+<Warning>
+Some BYOO providers do not have a developer program with open sign-up.
+</Warning>
+
 | Provider                                             | Slug              | Remarks                                |
 | ---------------------------------------------------- | ----------------- | -------------------------------------- |
 | [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | -                                      |
@@ -34,6 +38,9 @@ With custom credentials you can use your own team name and setup your own logo f
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           | -                                      |
 | [Cronometer](https://www.cronometer.com)             | `cronometer`      | -                                      |
 | [Omron](https://www.omron-healthcare.com)            | `omron`           | -                                      |
+| [MyFitnessPal API](https://www.myfitnesspalapi.com)  | `my_fitness_pal_v2` | -                                    |
+| [MapMyFitness](https://developer.mapmyfitness.com)   | `map_my_fitness`  | -                                      |
+| [Ultrahuman](https://www.ultrahuman.com)             | `ultrahuman`      | -                                      |
 
 ### Provider Rate Limits
 
@@ -91,6 +98,9 @@ BYOO credentials for the following providers are immediately active, once set th
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           |
 | [Cronometer](https://www.cronometer.com)             | `cronometer`      |
 | [Omron](https://www.omron-healthcare.com)            | `omron`           |
+| [Ultrahuman](https://www.ultrahuman.com)             | `ultrahuman`      |
+| [MyFitnessPal API](https://www.myfitnesspalapi.com)  | `my_fitness_pal_v2` |
+| [MapMyFitness](https://developer.mapmyfitness.com)   | `map_my_fitness`  |
 
 </Accordion>
 
