Fix method name for fetching all providers in custom widget guide

--- a/docs/wearables/connecting-providers/custom_widget.mdx
+++ b/docs/wearables/connecting-providers/custom_widget.mdx
@@ -35,7 +35,7 @@ const client = new VitalClient({
   environment: VitalEnvironment.Sandbox,
 });
 
-const allProviders = await client.providers.get_all();
+const allProviders = await client.providers.getAll();
 
 // allProviders
 // [
